# embeddings

./: .gitignore  .pre-commit-config.yaml  EmbedCatalog_rerun_colab.ipynb  README.md  RECONCILIATION_AND_RERUN.md  RERUN_COLAB.md  pyproject.toml  run.py  ttt_revised.tex
.github/workflows/: ci.yml
configs/: config.yaml
configs/compression/: binary.yaml  product_quantize.yaml  scalar_int8.yaml  truncate.yaml
figures/: figure_manifest.json
notebooks/: colab_a100.ipynb
results/: bge-base__arguana__candidates.csv  bge-base__arguana__index.csv  bge-base__arguana__manifest.json  bge-base__arguana__seed_variance.csv  bge-base__arguana__seed_variance_summary.csv  bge-base__fiqa__candidates.csv  bge-base__fiqa__index.csv  bge-base__fiqa__manifest.json  bge-base__fiqa__seed_variance.csv  bge-base__fiqa__seed_variance_summary.csv  bge-base__nfcorpus__candidates.csv  bge-base__nfcorpus__index.csv  bge-base__nfcorpus__manifest.json  bge-base__nfcorpus__seed_variance.csv  bge-base__nfcorpus__seed_variance_summary.csv  bge-base__scifact__candidates.csv  bge-base__scifact__index.csv  bge-base__scifact__manifest.json  bge-base__scifact__seed_variance.csv  bge-base__scifact__seed_variance_summary.csv  e5-base__arguana__candidates.csv  e5-base__arguana__index.csv  e5-base__arguana__manifest.json  e5-base__arguana__seed_variance.csv  e5-base__arguana__seed_variance_summary.csv  e5-base__fiqa__candidates.csv  e5-base__fiqa__index.csv  e5-base__fiqa__manifest.json  e5-base__fiqa__seed_variance.csv  e5-base__fiqa__seed_variance_summary.csv  e5-base__nfcorpus__candidates.csv  e5-base__nfcorpus__index.csv  e5-base__nfcorpus__manifest.json  e5-base__nfcorpus__seed_variance.csv  e5-base__nfcorpus__seed_variance_summary.csv  e5-base__scifact__candidates.csv  e5-base__scifact__index.csv  e5-base__scifact__manifest.json  e5-base__scifact__seed_variance.csv  e5-base__scifact__seed_variance_summary.csv  (+51 more)
scripts/: compare_storage_modes.py  embed_once.py  plot_paper_figures.py  regen_tables.py  run_all.bat  run_all.py  run_all.sh  run_ann_backends.py  run_catalog.py  run_catalog_gpu.py  run_paper_experiments.py  run_paper_experiments.py.isorted  run_seed_variance.py  run_seed_variance_cheap.py  run_seed_variance_gpu.py  tost_equivalence.py
tables/: ann-backends.tex  main-pareto.tex  scalar-int8.tex  seed-variance.tex  storage-modes.tex  thresholds.tex  tost.tex
tests/: test_backbone_factory.py.isorted  test_backbones_offline.py.isorted  test_beir_loader.py  test_cli.py  test_cli.py.isorted  test_composed_compressor.py.isorted  test_compression.py  test_compression.py.isorted  test_config_layout.py  test_config_layout.py.isorted  test_datasets.py.isorted  test_indexing.py  test_metrics.py  test_moo.py.isorted  test_pareto_pipeline.py  test_profiling.py  test_profiling.py.isorted  test_seed_variance.py  test_smoke_pipeline.py  test_stats.py  test_stats.py.isorted  test_storage_modes_comparison.py  test_utils_manifest.py  test_utils_manifest.py.isorted  test_utils_seeding.py
(+52 files in other folders)
