[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "embedopt"
version = "0.1.0"
description = "Multi-objective text embedding optimization research framework"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Jorge Martinez-Gil" }]
dependencies = [
  "hydra-core>=1.3.2",
  "numpy>=1.26",
  "typer>=0.12.3",
]

[project.optional-dependencies]
models = [
  "sentence-transformers>=3.0.1",
]
dev = [
  "black>=24.8.0",
  "isort>=5.13.2",
  "mypy>=1.10.0",
  "pre-commit>=3.7.1",
  "pytest>=8.2.0",
  "ruff>=0.5.0",
]

[project.scripts]
embedopt = "embedopt.cli:app"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.black]
line-length = 100
target-version = ["py311"]

[tool.isort]
profile = "black"
line_length = 100

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.mypy]
python_version = "3.11"
strict = true
packages = ["embedopt"]

[[tool.mypy.overrides]]
module = ["sentence_transformers", "sentence_transformers.*"]
ignore_missing_imports = true

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["tests"]
